[fix]一部内容の変更

--- a/about.html
+++ b/about.html
@@ -87,17 +87,18 @@
           </figure>
           <div class="p-about__skill-context">
             <p>
-              フロントエンドを中心に学習しています。<br />CSSとJavascriptが好きです。
+              フロントエンドから徐々に学習領域を広げています。<br />
+              最近はReactやJavaの学習に力を入れています。
             </p>
             <ul class="p-about__skill-context-list">
               <li class="p-about__skill-context-list-item">
-                言語：HTML | CSS | SCSS | Javascript | Typescript | PHP | SQL
+                言語：HTML | CSS | SCSS | Javascript | Typescript | Java | PHP | SQL
               </li>
               <li class="p-about__skill-context-list-item">
                 ライブラリ：React | Tailwind CSS
               </li>
               <li class="p-about__skill-context-list-item">
-                フレームワーク：jQuery | Next.js | Laravel
+                フレームワーク：jQuery | Next.js
               </li>
               <li class="p-about__skill-context-list-item">CMS：WordPress</li>
               <li class="p-about__skill-context-list-item">
@@ -135,21 +136,21 @@
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">2022/12</div>
               <div class="p-about__career-timeline-list-item-text">
-                WebGLに興味を持ち、JavaScriptライブラリで3Dコンテンツを作成できることを知る。<br />
-                自分で何か作ってみたいと思い、プログラミング学習を始める。
+                Web制作に興味を持ち、HTML/CSSで簡単なサイトの実装を行う。<br />
+                動くものやアプリケーション開発に興味を持ち、Javascriptなどのプログラミング言語の学習を始める。
               </div>
             </li>
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">2023/06</div>
               <div class="p-about__career-timeline-list-item-text">
-                エンジニアになることを決意、現在の会社に入社。
+                開発エンジニアになることを決意、株式会社オータムに入社。
               </div>
             </li>
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">現在</div>
               <div class="p-about__career-timeline-list-item-text">
-                フロントエンドエンジニアの研修を修了。<br />現在は案件先への配属前の待機中に社内受託業務に従事し、
-                Web制作の実装/テストを担当する。
+                フロントエンドエンジニアの研修を修了。<br />
+                現在は案件先への配属前の待機中に社内受託業務に従事し、Web制作の実装/テストやSES営業を担当する。
               </div>
             </li>
           </ol>
