--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <img src="/assets/img/images/dummy.png" />
             </a>
             <p class="c-productCard__title">Homete!</p>
-            <p class="c-productCard__skill">HTML | Tailwind CSS | Next.js | Firebase</p>
+            <p class="c-productCard__skill">HTML | SCSS | Next.js | Firebase</p>
           </div>
           <!-- .c-productCard -->
         </div>
