--- a/products/homete.html
+++ b/products/homete.html
@@ -67,7 +67,7 @@
         </figure>
         <p class="p-products__header-title">Homete!</p>
         <p class="p-products__header-skill">
-          HTML | Tailwind CSS | Next.js | Firebase
+          HTML | SCSS | Next.js | Firebase
         </p>
       </div>
       <!-- .p-products__header -->
