[fix]Read-Scaleのログイン情報追加

--- a/products/readscale.html
+++ b/products/readscale.html
@@ -83,13 +83,20 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
         <p>
-          読書管理アプリ「Read Scale」は、読書の記録を残し、積み上げた本の高さをスケールで表現するサービスです。<br />
+          読書管理アプリ「Read Scale」は、読書の記録を残し、積み上げた本の高さを数値化できるサービスです。<br />
           アプリデザインから作成し、figmaを使用してデザインカンプを作成しました。
         </p>
         <p>
           <a class="p-products__detail-link" href="https://read-scale.vercel.app/" target="_blank">こちら</a
           >から実際の制作物を確認できます。
         </p>
+        <div class="p-products__detail-login">
+          <p>ログインの際には以下のメールアドレス、パスワードをご利用ください。</p>
+          <ul class="p-products__detail-login-text">
+            <li>メールアドレス：test@test.com</li>
+            <li>パスワード：Test1234</li>
+          </ul>
+        </div>
       </div>
       <!-- .p-products__detail -->
 
