[fix]about内容の変更

--- a/about.html
+++ b/about.html
@@ -87,18 +87,18 @@
           </figure>
           <div class="p-about__skill-context">
             <p>
-              フロントエンドから徐々に学習領域を広げています。<br />
+              フロントエンドからバックエンドへ、徐々に学習領域を広げています。<br />
               最近はReactやJavaの学習に力を入れています。
             </p>
             <ul class="p-about__skill-context-list">
               <li class="p-about__skill-context-list-item">
-                言語：HTML | CSS | SCSS | Javascript | Typescript | Java | PHP | SQL
+                言語：HTML | CSS | SCSS | Javascript | Typescript | Java | SQL
               </li>
               <li class="p-about__skill-context-list-item">
                 ライブラリ：React | Tailwind CSS
               </li>
               <li class="p-about__skill-context-list-item">
-                フレームワーク：jQuery | Next.js
+                フレームワーク：Next.js
               </li>
               <li class="p-about__skill-context-list-item">CMS：WordPress</li>
               <li class="p-about__skill-context-list-item">
@@ -136,8 +136,8 @@
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">2022/12</div>
               <div class="p-about__career-timeline-list-item-text">
-                Web制作に興味を持ち、HTML/CSSで簡単なサイトの実装を行う。<br />
-                動くものやアプリケーション開発に興味を持ち、Javascriptなどのプログラミング言語の学習を始める。
+                Web制作に興味を持ち、HTML/CSSで簡単なWebサイト実装を行う。<br />
+                Javascriptなどのプログラミング言語の学習を始める。
               </div>
             </li>
             <li class="p-about__career-timeline-list-item">
@@ -149,8 +149,8 @@
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">現在</div>
               <div class="p-about__career-timeline-list-item-text">
-                フロントエンドエンジニアの研修を修了。<br />
-                現在は案件先への配属前の待機中に社内受託業務に従事し、Web制作の実装/テストやSES営業を担当する。
+                社内カリキュラムを修了。<br />
+                現在は案件先への配属前の待機中に社内受託業務に従事し、Web制作の実装/テストやBPの新規開拓を担当する。
               </div>
             </li>
           </ol>
