[fix]文章の修正

--- a/products/homete.html
+++ b/products/homete.html
@@ -83,8 +83,7 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">概要</h2>
         <p>
-          タスク管理アプリHomete!は、タスクを完了するとAIが褒めてくれるアプリです。<br />
-          アプリデザインから作成し、figmaを使用してデザインカンプを作成しました。
+          タスク管理アプリHomete!は、タスクを完了するとAIが褒めてくれるアプリです。
         </p>
         <!-- <p>
           <a class="p-products__detail-link" href="/" target="_blank">こちら</a
