--- a/about.html
+++ b/about.html
@@ -65,10 +65,10 @@
         <div class="p-about__about-context">
           <p>エンジニアを目指して勉強中の24歳です。</p>
           <p class="p-about__about-context-text">
-            出身は福島県で、育ちは岩手県、大学時代は宮城県仙台市で過ごしました。新しいことを学ぶことが大好きで、常にわくわくできるものを探しています。
+            出身は福島県で、育ちは岩手県、大学時代は宮城県仙台市で過ごしました。
           </p>
           <p class="p-about__about-context-text">
-            趣味は書道と展覧会巡り、たくさん食べることです。特にラーメンが大好きで、休日は美術館とラーメン屋を巡ることが多いです。
+            趣味は書道と展覧会巡り、美味しいものを探すことです。休日はプログラミングの勉強や料理をして過ごすことが多いです。
           </p>
         </div>
         <figure class="p-about__about-img">
@@ -96,9 +96,6 @@
               </li>
               <li class="p-about__skill-context-list-item">
                 ライブラリ：React | Tailwind CSS
-              </li>
-              <li class="p-about__skill-context-list-item">
-                フレームワーク：Next.js
               </li>
               <li class="p-about__skill-context-list-item">CMS：WordPress</li>
               <li class="p-about__skill-context-list-item">
@@ -143,7 +140,7 @@
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">2023/06</div>
               <div class="p-about__career-timeline-list-item-text">
-                開発エンジニアになることを決意、株式会社オータムに入社。
+                エンジニアになることを決意、株式会社オータムに入社。
               </div>
             </li>
             <li class="p-about__career-timeline-list-item">
