--- a/products/readscale.html
+++ b/products/readscale.html
@@ -129,14 +129,13 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
-          <li>使用言語：HTML | CSS | Typescript</li>
+          <li>使用言語：HTML | Typescript</li>
           <li>ライブラリ：React | Tailwind CSS | Chakra UI</li>
           <li>フレームワーク：Next.js</li>
           <li>外部API：Google Book API</li>
           <li>DB：Firestore</li>
           <li>ストレージ：Cloud Storage for Firebase</li>
           <li>認証：Firebase Authentication</li>
-          <li>テスト：Jest | React Testing Library</li>
           <li>デザインツール：figma</li>
           <li>ホスティング：Vercel</li>
         </ul>
