--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
             <li class="p-about__career-timeline-list-item">
               <div class="p-about__career-timeline-list-item-date">2022/12</div>
               <div class="p-about__career-timeline-list-item-text">
-                Web制作に興味を持ち、HTML/CSSで簡単なWebサイト実装を行う。<br />
+                システム / Web開発に興味を持ち、HTML/CSSで簡単なWebサイト実装を行う。<br />
                 Javascriptなどのプログラミング言語の学習を始める。
               </div>
             </li>
@@ -147,7 +147,7 @@
               <div class="p-about__career-timeline-list-item-date">現在</div>
               <div class="p-about__career-timeline-list-item-text">
                 社内カリキュラムを修了。<br />
-                現在は案件先への配属前の待機中に社内受託業務に従事し、Web制作の実装/テストやBPの新規開拓を担当する。
+                現在は案件先への配属前の待機中に内勤業務に従事、受託開発の実装/テストや新規BP開拓を担当する。
               </div>
             </li>
           </ol>
