--- a/products/portfolio.html
+++ b/products/portfolio.html
@@ -123,7 +123,8 @@
       <div class="p-products__detail">
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
-          <li>使用言語：HTML | CSS | Javascript</li>
+          <li>使用言語：HTML | SCSS | Javascript | jQuery</li>
+          <li>プラグイン：jQuery Validation Plugin</li>
           <li>エディタ：VisualStudio Code</li>
           <li>デザインツール：figma</li>
           <li>ホスティング：Vercel</li>
