--- a/products/homete.html
+++ b/products/homete.html
@@ -122,9 +122,10 @@
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
           <li>使用言語：HTML | SCSS | Typescript</li>
-          <li>ライブラリ：React</li>
-          <li>フレームワーク：Next.js</li>
+          <li>ライブラリ：React Icons | Zod</li>
+          <li>フレームワーク：React | Next.js</li>
           <li>DB：Firestore</li>
+          <li>ストレージ：Cloud Storage for Firebase</li>
           <li>認証：Firebase Authentication</li>
           <li>テスト：Jest | React Testing Library</li>
           <li>デザインツール：figma</li>
