--- a/products/readscale.html
+++ b/products/readscale.html
@@ -130,8 +130,8 @@
         <h2 class="c-showTitle">使用技術</h2>
         <ul>
           <li>使用言語：HTML | Typescript</li>
-          <li>ライブラリ：React | Tailwind CSS | Chakra UI</li>
-          <li>フレームワーク：Next.js</li>
+          <li>ライブラリ：Tailwind CSS | Chakra UI | React Icons | React Hook Form</li>
+          <li>フレームワーク：React | Next.js</li>
           <li>外部API：Google Book API</li>
           <li>DB：Firestore</li>
           <li>ストレージ：Cloud Storage for Firebase</li>
