[new]新しいプロダクトの追加

--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
             <p class="c-productCard__skill">HTML | SCSS | Next.js | Firebase</p>
           </div>
           <!-- .c-productCard -->
+          <div class="c-productCard">
+            <a href="#" class="c-productCard__img">
+              <img src="/assets/img/images/dummy.png" />
+            </a>
+            <p class="c-productCard__title">Coming Soon...</p>
+            <p class="c-productCard__skill">Coming Soon...</p>
+          </div>
+          <!-- .c-productCard -->
         </div>
       </section>
 
